tests/parser/syntax-errors/no-lhs-in-assignment/expected_expr_before_assign_in_func.choc
# RUN: choco-opt "%s" | filecheck "%s"

def foo():
    = 1

# CHECK:      SyntaxError (line 4, column 5): No left-hand side in assign statement.
# CHECK-NEXT: >>>    = 1
# CHECK-NEXT: >>>----^
